--- a/kontakt.html
+++ b/kontakt.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Programer jr.</title>
-    <link rel="stylesheet" href="./css/kontakt.css">
+    <link rel="stylesheet" href="./css/kontakt.css" />
   </head>
   <body>
-
     <header>
       <div class="contatier">
         <a href="index.html">
-          <img src="img/pocetna.png" alt="Pocetna strana">
+          <img src="img/pocetna.png" alt="Pocetna strana" />
         </a>
       </div>
     </header>
 
     <section id="glavni">
-      <p>Kontakt telefon: +381666177998</p>
-      <p>Adersa: Novi Sad, Koste Racina 28</p>
-      <p>Naša email adresa: <a href="mailto:srdjanlevnaic@gmail.com">Srđan</a> </p>
+      <p>Kontakt telefon:</p>
+      <p>Adersa:</p>
+      <p>Naša email adresa:</p>
     </section>
   </body>
 </html>
